# map_manager

./: LICENSE  README.md
map_manager/: CMakeLists.txt  package.xml
map_manager/bash/: map_saving.sh  start_rtabmap.bash  start_rtabmap_localization_indoor.sh  start_rtabmap_localization_outdoor.sh  start_rtabmap_mapping_indoor.sh  start_rtabmap_mapping_outdoor.sh
map_manager/cfg/: laserscan_multi_merger_cfg.yaml  params.yaml  rosbag_record
map_manager/include/automated_sm_mapping/: automated_sm_mapping.h
map_manager/include/dbdriver/: dbdriver.h
map_manager/include/environment_detector/: environment_detector.h
map_manager/include/globaltracker/: globaltracker.h
map_manager/include/graphoptimizer/: graphoptimizer.h
map_manager/include/linkpoint/: linkpoint.h
map_manager/include/lpgraph/: lpgraph.h
map_manager/include/map_saver_starter/: map_saver_starter.h
map_manager/include/register_velodyne/: register_velodyne.h
map_manager/include/rtabmap_starter/: rtabmap_starter.h
map_manager/include/rvizgraph/: rvizgraph.h
map_manager/include/save_map/: save_map.h
map_manager/include/scanutils/: scanutils.h
map_manager/include/sm_mapping/: sm_mapping.h
map_manager/include/text_input/: text_input.h
map_manager/launch/: automated_sm_mapping.launch  ekf.launch  pointcloud_to_laserscan.launch  rtabmap_localization_indoor.launch  rtabmap_localization_outdoor.launch  rtabmap_mapping_indoor.launch  rtabmap_mapping_indoor_offline.launch  rtabmap_mapping_outdoor.launch  rtabmap_mapping_outdoor_jetson_offline.launch  sensor_model_full.launch  sm_mapping.launch  utils_map_manager.launch
map_manager/msg/: end_env_detection.msg  save_linkpoint_pose.msg  start_env_detection.msg
map_manager/src/: automated_sm_mapping.cpp  dbdriver.cpp  environment_detector.cpp  globaltracker.cpp  graphoptimizer.cpp  linkpoint.cpp  lpgraph.cpp  map_saver_starter.cpp  register_velodyne.cpp  rtabmap_starter.cpp  rvizgraph.cpp  save_map.cpp  scanutils.cpp  sm_mapping.cpp  text_input.cpp
